[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spiko-O.gd" type="Script" id=1]
[ext_resource path="res://art/enemies/spike-o.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.3211, 6.95449 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.2345, 7.2351 )

[node name="Spike-O" type="KinematicBody2D" groups=[
"Enemies",
"Spike-o",
]]
rotation = 3.14159
collision_layer = 64
collision_mask = 25
script = ExtResource( 1 )
detects_cliffs = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 1, 0.9 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 4.68124, 7.03554 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 16

[node name="hit_ground_checker" type="RayCast2D" parent="."]
position = Vector2( 4.68124, 7.03554 )
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 17

[node name="player_checker" type="RayCast2D" parent="."]
position = Vector2( -0.229538, 2.54569 )
enabled = true
cast_to = Vector2( 0, -100 )
collision_mask = 2147483649

[node name="sides_checker" type="Area2D" parent="."]
gravity = 0.0
collision_layer = 64
collision_mask = 41
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.14, 2 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
